prod/directory/naas/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: naas
  annotations:
    linkerd.io/inject: enabled
  name: naas
