prod/directory/naas/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-apollo
  namespace: naas
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: notification-apollo
  template: 
    metadata:
      labels:
        app: notification-apollo
    spec:
      containers:
      - name: apollo
        image: digitalcollab/notifications-apollo:latest
        ports:
        - containerPort: 4000
        readinessProbe:
          httpGet:
            path: /.well-known/apollo/server-health
            port: 4000
          initialDelaySeconds: 20
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /.well-known/apollo/server-health
            port: 4000
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3
        resources:
          requests:
            memory: "256Mi"
            cpu: "0.1"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prismagraphql
  namespace: naas
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: prismagraphql
  template: 
    metadata:
      labels:
        app: prismagraphql
    spec:
      containers:
      - name: prisma
        image: prismagraphql/prisma:1.26
        ports:
        - containerPort: 4466
        resources:
          requests:
            memory: "256Mi"
            cpu: "0.1"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: naas
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: postgres
  template: 
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:10.6
        ports:
        - containerPort: 5432
        resources:
          requests:
            memory: "256Mi"
            cpu: "0.1"
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          subPath: postgresql-db
          name: postgres-volume
      volumes:
      - name: postgres-volume
        azureDisk:
          kind: Managed
          diskName: notificationDBVolume
          diskURI: /subscriptions/{sub-id}/resourceGroups/{resourceGroup}/providers/Microsoft.Compute/disks/notificationDBVolume
