prod/directory/naas/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-apollo
  namespace: naas
spec:
  clusterIP: None
  ports:
    - protocol: TCP
      port: 4000
  selector: 
    app: notification-apollo
---
apiVersion: v1
kind: Service
metadata:
  name: prismagraphql
  namespace: naas
spec:
  clusterIP: None
  ports:
    - protocol: TCP
      port: 4466
  selector: 
    app: prismagraphql
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: naas
spec:
  clusterIP: None
  ports:
    - protocol: TCP
      port: 5432
  selector: 
    app: postgres
---
